...
            }
        }
        LazyColumn(
            contentPadding = paddingValues,
            state = scrollState,
            modifier = Modifier
                .testTag("CollectorItem")
        ) {
            if (collectorToShow.size != 0) {
                items(collectorToShow.size) { collectorId ->
                    collectorToShow[collectorId]?.let { CollectorListItem(collector = it)}
                }
            } else {
                item {
                    Text(
                        text = "No se encontrarón colecciones para mostrar",
                        style = TextStyle(
                            fontSize = 18.sp,
                        ),
                        modifier = Modifier.testTag("CollectorListError")
                    )
                }
            }
        }
    }
}
...
