...
                            Column(
                                horizontalAlignment = Alignment.CenterHorizontally
                            ) {
                                TextField(
                                    value = collectorUser,
                                    onValueChange = { collectorUser = it },
                                    label = { Text(text = "Digite su correo") },
                                    supportingText = {
                                        if (isError) {
                                            if (collectorUser == "") {
                                                Text(
                                                    modifier = Modifier.fillMaxWidth(),
                                                    text = "Digite su correo",
...
                                        } else {
                                            isError = true
                                        }
                                    },
                                    modifier = Modifier.padding(top = 20.dp)
                                ) {
                                    Text(text = "Identificarse")
                                }
                            }

                        }

                    }
...
