...
        LazyColumn(
            contentPadding = paddingValues,
            state = scrollState
        ) {
            if (albumsToShow.results.isNotEmpty()) {
                items(albumsToShow.results.size) { albumId ->
                    AlbumListItem(album = albumsToShow.results[albumId])
                }
            } else {
                item {
                    Text(
                        text = "No se encontraron álbumes para mostrar",
                        style = TextStyle(
                            fontSize = 18.sp,
                        ),
                        modifier = Modifier.testTag("AlbumListError")
                    )
                }
...
