...
                    style = TextStyle(
                        fontWeight = FontWeight.SemiBold,
                        fontStyle = FontStyle.Italic,
                        fontSize = 16.sp,
                        color = Color.White
                    ),
                    modifier = Modifier.testTag("AlbumListTitle")
                )
            }
        },
        colors = TopAppBarDefaults.topAppBarColors(toolbarColor.value),
        navigationIcon = { ActionItems() })
}
...
